# Coke8080

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  main  test.bi
include/: cpu.hpp  machine.hpp  memory.hpp
src/: cpu.cpp  machine.cpp  main.cpp
test/: endianness.cpp
